force-app/main/default/objects/Partner_ReAuth_Requirement__c/Partner_ReAuth_Requirement__c.object-meta.xml
<CustomObject>
    <label>Partner ReAuth Requirement</label>
    <nameField>
        <displayFormat>prar-{0000000}</displayFormat>
        <label>Partner ReAuth Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner ReAuth Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>