force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner ReAuth Requirements</relationshipLabel>
    <relationshipName>Partner_ReAuth_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>