force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/Achievability__c.field-meta.xml
<CustomField>
    <fullName>Achievability__c</fullName>
    <formula>IF(Performance__c=&quot;완료&quot;,true,IF(AND(ISNUMBER(Goal__c), ISNUMBER(Performance__c), VALUE(Goal__c)&lt;=VALUE(Performance__c)),true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achievability</label>
    <type>Checkbox</type>
</CustomField>