force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>보유 역량</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>사업 경험</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>