force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/Detail1__c.field-meta.xml
<CustomField>
    <fullName>Detail1__c</fullName>
    <label>Detail1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>교육 수강</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>자격 인증</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>사업 계획서</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>고객 사례</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>