force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/Detail2__c.field-meta.xml
<CustomField>
    <fullName>Detail2__c</fullName>
    <label>Detail2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Detail1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Samsung Cloud Platform Practitioner Essentials</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Samsung Cloud Platform Hands On</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Samsung Cloud Platform 계약~청구 비즈니스 기본</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>재무 안정성</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>사업 전략</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>보유 역량</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>