force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/Goal__c.field-meta.xml
<CustomField>
    <fullName>Goal__c</fullName>
    <label>Goal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>