force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <label>Performance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>