force-app/main/default/objects/Partner_ReAuth_Requirement__c/fields/rowspan__c.field-meta.xml
<CustomField>
    <fullName>rowspan__c</fullName>
    <label>rowspan</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>