force-app/main/default/objects/Partner_ReAuth_Requirement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Category__c</columns>
    <columns>Detail1__c</columns>
    <columns>Detail2__c</columns>
    <columns>Goal__c</columns>
    <columns>Performance__c</columns>
    <columns>Achievability__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>